@@ -200,6 +200,14 @@ Available Functions
    was added in Python 2.5.)
 
 
+.. function:: warnpy3k(message[, category[, stacklevel]])
+
+   Issue a warning related to Python 3.x deprecation. Warnings are only shown 
+   when Python is started with the -3 option. Like func:`warn` *message* must
+   be a string and *category* a subclass of :exc:`Warning`. :func:`warnpy3k`
+   is using :exc:`DeprecationWarning` as default warning class.
+
+
 .. function:: showwarning(message, category, filename, lineno[, file])
 
    Write a warning to a file.  The default implementation calls
